@@ -6,4 +6,4 @@ sed -i 's|localhost|'${DBHOST}'|g' minijax.properties
 
 mvn clean package
 
-java -XX:+UseNUMA -XX:+UseParallelGC -jar target/minijax-techempower-0.0.1.jar &
+java -server -Xms512m -Xmx2g -XX:+AggressiveOpts -XX:+UseNUMA -XX:+UseParallelGC -jar target/minijax-techempower-0.0.1.jar &
